# LibAFL-FrameShift

./: .gitignore  .gitmodules  LICENSE  README.md
experiments/: build  run
experiments/base/: Dockerfile
experiments/base_lib/: Dockerfile
experiments/base_py/: Dockerfile
experiments/base_rust/: Dockerfile
experiments/bloaty/: Dockerfile
experiments/fonttools/: Dockerfile  fuzz_compile.py  fuzz_ttfont.py  fuzz_ttfont_save.py  fuzz_woff2.py
experiments/freetype2/: Dockerfile  build.sh
experiments/harfbuzz/: Dockerfile  build.sh
experiments/image-png/: Dockerfile  build.sh
experiments/imagemagick/: Dockerfile
experiments/libjpeg/: Dockerfile
experiments/libpng/: Dockerfile  build.sh
experiments/libtiff/: Dockerfile  benchmark.yaml
experiments/pyasn1/: Dockerfile  fuzz_decode.py  seed.asn
experiments/vorbis/: Dockerfile
experiments/wasmtime/: Dockerfile  build.sh
frameshift_afl/: Cargo.toml
frameshift_afl/src/: fuzz_afl.rs  fuzz_frameshift.rs  lib.rs
frameshift_afl/src/components/: gen.rs  mod.rs  search_metadata.rs  search_stage.rs  structured_input.rs  wrapped_mutator.rs
frameshift_afl/src/core/: mod.rs  search.rs  structured.rs
frameshift_afl_lib/: Cargo.toml
frameshift_afl_lib/src/: lib.rs
