[package]
name = "frameshift_afl"
version = "0.1.0"
authors = ["Harrison Green"]
edition = "2021"

[features]
default = ["std"]
std = []
use_counters = []

[profile.release]
opt-level = 3
overflow-checks = true
lto = true

[dependencies]
libafl = { path = "../third_party/LibAFL/libafl" }
libafl_cc = { path = "../third_party/LibAFL/libafl_cc" }
libafl_targets = { path = "../third_party/LibAFL/libafl_targets", features = ["libfuzzer", "sancov_cmplog", "sancov_pcguard_hitcounts", "sanitizer_interfaces", "sancov_8bit"] }
libafl_bolts = { path = "../third_party/LibAFL/libafl_bolts" }

colored = "2.0.4"
ahash = "0.8.9"
serde = "*"
num-traits = { version = "0.2", default-features = false }
crc = "3.0.1"
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0.111"
lazy_static = "1.4.0"
mimalloc = { version = "*", default-features = false }
nix = { version = "0.29", features = ["fs"] }
rand = "0.8.5"
enum_dispatch = "0.3.13"
base64 = "0.22.1"
flate2 = "1.0.33"
hex = "0.4.3"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[lib]
name = "frameshift_afl"
crate-type = ["lib", "staticlib"]
