[package]
name = "frameshift_afl_lib"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = []
use_counters = ["frameshift_afl/use_counters"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 1
debug = true
overflow-checks = true

[dependencies]
frameshift_afl = { path = "../frameshift_afl" }
libafl = { path = "../third_party/LibAFL/libafl" }
libafl_cc = { path = "../third_party/LibAFL/libafl_cc" }
libafl_targets = { path = "../third_party/LibAFL/libafl_targets", features = ["pointer_maps", "sancov_cmplog", "libfuzzer", "sancov_8bit"] }
libafl_bolts = { path = "../third_party/LibAFL/libafl_bolts" }

clap = { version = "4.0", features = ["derive"] }

[lib]
name = "frameshift_afl_lib"
crate-type = ["cdylib", "staticlib"]
